[package]
name = "chainflip-feedhandler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
float-cmp = "0.9.0"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
primitive-types = "0.12.2"
rand = "0.8.5"
reqwest = {version = "0.11.23", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simple_logger = "4.3.3"
stable-vec = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.21.0"
